first thing is i create my own terminal theme, that i used it inside xfce terminal, the other two file are related to my vim editor config file, and the tmux configuration file.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,22 +1,44 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+
 unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
+
 bind -r ^ last-window
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
 bind | split-window -h
 bind _ split-window -v
 unbind '"'
 unbind %
+
 set -g mouse on
 set -g status-position bottom
 set -g status-right-length 50
 set -g status-left-length 20
-set -g mode-keys vi
+#set -g mode-keys vi
 set -g status-right ''
 set -g status-style 'bg=#333333 fg=#5eacd3'
 setw -g window-status-current-style fg=colour112
+setw -g mode-keys vi
+set-option -s set-clipboard off
+
+set-option -g renumber-window on
+
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+
+
+# tmux plugin manager
+
+set -g @plugin 'tmux-plugins/tpm'
+
+run '~/.tmux/plugins/tpm/tpm'
